# tgindex

./: .env.example  .gitignore  README.md  alembic.ini  auth.py  generate_session.py  pyproject.toml  render.yaml  seed_sources.py
app/: __init__.py  main.py
app/api/: __init__.py  dependencies.py  router.py
app/api/endpoints/: __init__.py  chats.py  search.py  sources.py  statistics.py  system.py
app/api/schemas/: __init__.py  chat.py  (+3 more)
app/cli/: __init__.py  commands.py
app/config/: __init__.py  constants.py  settings.py
app/crawler/: __init__.py  base_source.py  catalog_source.py  github_source.py  recursive_source.py  reddit_source.py  search_engine.py  telegram_search_source.py
app/dashboard/: __init__.py  router.py
app/database/: __init__.py  base.py  engine.py  session.py
app/models/: __init__.py  chat.py  crawl_log.py  source.py  statistics.py  url_queue.py
app/repositories/: __init__.py  base.py  chat_repository.py  queue_repository.py  source_repository.py  stats_repository.py
app/scheduler/: __init__.py  jobs.py
app/services/: __init__.py  classifier.py  crawler_service.py  deduplicator.py  metadata_service.py  normalizer.py  scheduler_service.py  statistics_service.py  validator.py
app/telegram/: __init__.py  client.py  metadata_extractor.py  rate_limiter.py
app/utils/: __init__.py  hash_utils.py  time_utils.py  url_utils.py
app/workers/: __init__.py  discovery_worker.py  metadata_worker.py  update_worker.py  validation_worker.py
docs/: GITHUB_TOKEN.md  UPTIMEROBOT.md
migrations/: env.py
migrations/versions/: 001_initial.py
(+7 files in other folders)
